codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__realtime_requests__remote_voice_picker.snap
---
source: tui/src/app/tests/realtime_requests.rs
expression: "crate::chatwidget::tests::helpers::render_bottom_popup(&app.chat_widget, 80)"
---
  选 择 语 音
  将 在 下 次 语 音 对 话 中 生 效 。

  1. juniper
  2. maple
  3. spruce
  4. ember
  5. vale
  6. breeze
  7. arbor
› 8. sol（ 当 前 ）

  按  enter 确 认 ， 或 按  esc 返 回
