codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__realtime_requests__remote_voice_picker_server_default.snap
---
source: tui/src/app/tests/realtime_requests.rs
expression: popup
---
  选 择 语 音
  将 在 下 次 语 音 对 话 中 生 效 。

› 1. maple (current)
  2. cove
  3. juniper

  按  enter 确 认 ， 或 按  esc 返 回
