codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__realtime_requests__voice_partial_completed_after_thread_switch.snap
---
source: tui/src/app/tests/realtime_requests.rs
expression: "normalize_voice_snapshot_directory(&rendered, &app.config.cwd)"
---
╭───────────────────────────────╮
│ >_ OpenAI Codex (v0.0.0)      │
│                               │
│ 模型： gpt-test   /model 更改 │
│ 目录： /tmp/project           │
╰───────────────────────────────╯

  To get started, describe a task or try one of these commands:

  /init - create an AGENTS.md file with instructions for Codex
  /status - show current session configuration
  /permissions - choose what Codex is allowed to do
  /model - choose what model and reasoning effort to use
  /review - review any changes and find issues

› spoken partial completed
